--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,12 @@
 
     box-sizing: border-box;
 }
+
+body {
+
+    position: relative;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 16px;
+    line-height: 24px;
+    background: url("../images/background.jpg");
+}
