--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,4 +31,15 @@ h1 {
     background: #fffd91
 }
 
+.main-content {
 
+    padding: 5% 0;
+}
+
+.btn {
+
+    padding: 15px 75px;
+    font-size: 20px;
+    background: #ffabf8;
+    border: 2px solid #000ecf;
+}
